test: wallet crud tests, income show tests
